# fermerce-backend

./: .flake8  .gitignore  README.md  bootstrap.py  main.py  pyproject.toml  pytest.ini
fermerce/app/address/: models.py  services.py
fermerce/app/auth/: models.py  services.py
fermerce/app/cards/: models.py  services.py
fermerce/app/cart/: models.py  services.py
fermerce/app/category/: services.py
fermerce/app/charge/: models.py  schemas.py  services.py  utils.py
fermerce/app/country/: models.py  schemas.py  services.py
fermerce/app/delivery_mode/: models.py  schemas.py  services.py
fermerce/app/measuring_unit/: services.py
fermerce/app/medias/: drives.py  models.py  schemas.py  services.py  utils.py
fermerce/app/message/: models.py  services.py
fermerce/app/order/: models.py  schemas.py  services.py
fermerce/app/payment/: models.py
fermerce/app/permission/: models.py  services.py
fermerce/app/product/: models.py  services.py
fermerce/app/product_detail/: models.py  services.py
fermerce/app/promo_code/: models.py  services.py
fermerce/app/recipient/: models.py  schemas.py  services.py
fermerce/app/refund/: models.py  schemas.py  services.py
fermerce/app/reviews/: services.py
fermerce/app/selling_units/: models.py  schemas.py  services.py
fermerce/app/staff/: dependency.py  schemas.py  services.py
fermerce/app/state/: services.py
fermerce/core/: help  settings.py
fermerce/taskiq/: _repository.py  broker.py  config.py  utils.py
fermerce/tests/: coftest.py
migrations/: env.py
templates/: action.html  task_error_email.html
(+282 files in other folders)
